fix: color pallete for dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,22 +10,15 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 56,
-      30,112;
-    --background-start-rgb: 234,
-      247,
-      223;
-    --background-end-rgb: 234,
-      247,
-      223;
+    --foreground-rgb: 56,30,112;
+    --background-start-rgb: 234,247,223;
+    --background-end-rgb: 234,247,223;
   }
 
   .dark {
-    --foreground-rgb: 234,
-      247,
-      223;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 234,247,223;
+    --background-start-rgb: 57, 57, 57;
+    --background-end-rgb: 57, 57, 57;
   }
 }
 
